--- a/css/style.less
+++ b/css/style.less
@@ -93,8 +93,20 @@ body {
         }
 
         .header__burger-button--active {
-            position: sticky;
-            top: 20px;
+            position: fixed;
+            top: 60px;
+        }
+
+        .header__input-container {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            font-size: 22px;
+            color: rgb(161, 160, 160);
+
+            .input-container__title--active {
+                color: white;
+            }
         }
 
         .header__play-mode-handler {
@@ -108,6 +120,7 @@ body {
             position: relative;
             transform: scale(0.75);
             z-index: 5;
+            /*margin-right: 100px;*/
 
             .toggleWrapper {
                 input {
@@ -341,7 +354,7 @@ body {
             position: relative;
             width: 100%;
             height: 100%;
-            transition: transform 0.8s;
+            transition: transform 0.7s;
             transform-style: preserve-3d;
 
 
@@ -486,3 +499,21 @@ body {
         }
     }
 }
+
+@media (max-width: 721px) {
+    #popup-container {
+        width: 50% !important;
+    }
+
+    @media (max-width: 540px) {
+        .header__title {
+            visibility: hidden;
+            width: 2px;
+        }
+
+        #popup-list {
+            font-size: 16px;
+        }
+    }
+}
+
