--- a/css/style.less
+++ b/css/style.less
@@ -391,7 +391,7 @@ body {
                 position: relative;
 
                 .play-item__repeat-arrow {
-                    background: url('/assets/img/redo-alt-solid.svg') no-repeat;
+                    background: url('../assets/img/redo-alt-solid.svg') no-repeat;
                     background-size: contain;
                     width: 25px;
                     height: 25px;
