--- a/css/style.less
+++ b/css/style.less
@@ -287,7 +287,6 @@ body {
 .card-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 50px;
     justify-content: center;
     list-style: none;
 
@@ -299,6 +298,7 @@ body {
         border-radius: 10px;
         padding-top: 40px;
         cursor: pointer;
+        margin: 10px;
 
         .card-title {
             text-align: center;
@@ -349,6 +349,7 @@ body {
         height: 260px;
         perspective: 1000px;
         cursor: pointer;
+        margin: 10px;
 
         .play-item__wrapper {
             position: relative;
@@ -412,7 +413,7 @@ body {
     .play-cards-wrapper {
         display: flex;
         flex-wrap: wrap;
-        gap: 50px;
+        margin: 10px;
         justify-content: center;
         list-style: none;
     }
@@ -425,6 +426,7 @@ body {
         box-shadow: 0 10px 20px rgba(0, 0, 0, .4);
         cursor: pointer;
         position: relative;
+        margin: 10px;
 
         .play-item__image--game-mode {
             width: 100%;
