--- a/css/style.less
+++ b/css/style.less
@@ -41,8 +41,9 @@ body {
         min-height: 145px;
 
         .header__title {
-            font-size: 34px;
+            font-size: 40px;
             vertical-align: middle;
+            font-weight: bold;
         }
 
         .header__burger-button {
@@ -271,10 +272,18 @@ body {
             .popup-list-item {
                 margin-bottom: 20px;
                 cursor: pointer;
+                transition: 0.3s;
+            }
+            
+            .popup-list-item--active {
+                font-size: 23px;
+                color: @orange-color;
             }
 
             .popup-list-item:hover {
                 text-decoration: underline;
+                font-size: 23px;
+                color: @orange-color;
             }
         }
     }
@@ -426,7 +435,8 @@ body {
         border-radius: 6px;
         cursor: pointer;
         align-self: center;
-        padding-top: 5px;;
+        padding-top: 5px;
+        ;
 
         transition: 0.3s;
 
@@ -446,29 +456,52 @@ body {
         opacity: 0.8;
     }
 
-    .card-list__game-result {
-        
-        
+    .game-result__description {
+        font-size: 40px;
+        text-align: center;
+        margin: 0 auto 20px;
+    }
 
-        .game-result__description {
-            font-size: 40px;
-            text-align: center;
-            margin: 0 auto 20px;
-        }
+    .game-result__image {
+        width: 500px;
+        height: 400px;
+    }
 
-        .game-result__image {
-            width: 500px;
-            height: 400px;
-        }
+    .card-list__table--reset-button {
+        width: 150px;
+        height: 50px;
+        border-radius: 9px;
+        font-weight: bold;
+        color: white;
+        font-size: 22px;
+        background-color: @cyan-color;
+        border: none;
+        cursor: pointer;
+        transition: 0.3s;
+
+        margin-bottom: 20px;
+    }
+
+    .card-list__table--reset-button:hover {
+        box-shadow: 0 10px 20px @cyan-color;
     }
 
 
     .card-list__table {
         width: 100%;
+        color: white;
+        font-weight: 500;
+        font-size: 19px;
+        text-align: center;
 
         .card-list__table-data {
             min-width: 50px;
+            background-color: @orange-color;
+        }
+
+        .card-list__table-data--title-data {
             background-color: @cyan-color;
+            height: 34px;
         }
     }
 }
@@ -489,4 +522,3 @@ body {
         }
     }
 }
-
