--- a/css/style.less
+++ b/css/style.less
@@ -274,7 +274,7 @@ body {
                 cursor: pointer;
                 transition: 0.3s;
             }
-            
+
             .popup-list-item--active {
                 font-size: 23px;
                 color: @orange-color;
@@ -407,22 +407,34 @@ body {
         cursor: pointer;
         position: relative;
         margin: 10px;
+        
 
         .play-item__image--game-mode {
             width: 100%;
             height: 100%;
             background-size: contain;
         }
+
+        .card-list__play-item--disabled {
+            filter: grayscale(100%);
+            -webkit-filter: grayscale(100%);
+            -moz-filter: grayscale(100%);
+            -ms-filter: grayscale(100%);
+            -o-filter: grayscale(100%);
+            filter: url(desaturate.svg#greyscale);
+            filter: gray;
+            -webkit-filter: grayscale(1);
+        }
     }
 
-    .card-list__play-item--disabled {
+    /*.card-list__play-item--disabled {
         position: absolute;
         background: rgba(124, 122, 122, 0.712);
         width: 100%;
         height: 100%;
         top: 0;
         cursor: auto;
-    }
+    }*/
 
     .card-list__play-button {
         max-width: 300px;
